# GeoServer

./: CMakeLists.txt  Dockerfile  Dockerfile_1  Dockerfile_2  Dockerfile_3  Dockerfile_4  Dockerfile_build  Dockerfile_dve  Dockerfile_run  README.md  create_docker_container.sh  data.cpp  data.h  geo_analysis_server.cpp  greeter_server.cpp  grpc_file_generation.sh  main.cpp
data/: muc.csv  neighborhoods_munich2.csv  nyc.csv
docker-scripts/: 1.sh  2.sh  3.sh  4.sh  build.sh  compile.sh  make_app.sh
protos/: geoanalysis.proto
